fix text wrap in authors sections

--- a/frontend/public/tailwind.css
+++ b/frontend/public/tailwind.css
@@ -170,6 +170,10 @@
   gap: 5px
 }
 
+.text-wrap {
+  text-wrap: wrap
+}
+
 .rounded-md {
   border-radius: 0.375rem
 }
